replace OpenAI with ZhipuAi